@@ -1,3 +1,12 @@
+2026-02-03T00:59:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21612408294 # 866
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 692 1086 / 694 1088
+* notice: next accum: outdated-unq outdated-all / unq all: 693 1087 / 695 1089
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-16 2026-01-17 2026-01-18] / []
+
 2026-02-02T00:59:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21573723335 # 865
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-02
